--- a/M-02/ex01/Makefile
+++ b/M-02/ex01/Makefile
@@ -1,7 +1,7 @@
 
-SOURCES = megaphone.cpp
+SOURCES = main.cpp Fixed.cpp
 
-NAME = megaphone
+NAME = Fixed
 CC			= clang++
 CFLAGS		= -Wall -Wextra -Werror -std=c++98
 
