--- a/M-02/ex02/Makefile
+++ b/M-02/ex02/Makefile
@@ -1,7 +1,7 @@
 
-SOURCES = megaphone.cpp
+SOURCES = main.cpp Fixed.cpp
 
-NAME = megaphone
+NAME = Fixed
 CC			= clang++
 CFLAGS		= -Wall -Wextra -Werror -std=c++98
 
@@ -20,3 +20,4 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re test
+
