--- a/M-00/ex03/Makefile
+++ b/M-00/ex03/Makefile
@@ -1,8 +1,7 @@
-NAME		=	phonebook
+NAME		=	account
 
-SRC			=	main.cpp \
-				PhoneBook.cpp \
-				Contacts.cpp
+SRC			=	account.cpp \
+				tests.cpp
 
 OBJS		=	$(SRC:.cpp=.o)
 
