--- a/M-01/ex00/Makefile
+++ b/M-01/ex00/Makefile
@@ -1,22 +1,33 @@
+NAME		=	zombie
 
-SOURCES = Zombie.cpp randomChump.cpp newZombie.cpp main.cpp
+SRC			=	main.cpp \
+				randomChump.cpp \
+				Zombie.cpp \
+				newZombie.cpp
 
-NAME = zombie
-CC			= clang++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+OBJS		=	$(SRC:.cpp=.o)
 
+CC		=	clang++
+
+CFLAGS		=	-Wall -Wextra -Werror -std=c++98
+
+
+EXEC		=	$(NAME)
 
 all: $(NAME)
 
-$(NAME): $(SOURCES)
-	@echo "COMPILATION $@"
+$(NAME): $(OBJS)
 	@$(CC) $(CFLAGS) -o $@ $^
 
+
 clean:
+	rm -rf $(OBJS)
 
 fclean: clean
-	rm -rf $(NAME)
+	rm -rf $(EXEC)
+	
+re:	fclean all
 
-re: fclean all
 
-.PHONY: all clean fclean re test
+
+.PHONY:	all clean fclean re run
