--- a/M-03/ex00/Makefile
+++ b/M-03/ex00/Makefile
@@ -7,7 +7,7 @@ OBJS		=	$(SRC:.cpp=.o)
 
 CC		=	clang++
 
-FLAGS		=	-Wall -Wextra -Werror -std=c++98
+CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 
 
 EXEC		=	$(NAME)
