--- a/M-04/ex00/Makefile
+++ b/M-04/ex00/Makefile
@@ -9,7 +9,7 @@ SRC			=	main.cpp \
 
 OBJS		=	$(SRC:.cpp=.o)
 
-CC		=	clang++
+CC		=	c++
 
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 
@@ -19,7 +19,7 @@ EXEC		=	$(NAME)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 
 
 clean:
