--- a/M-04/ex02/Makefile
+++ b/M-04/ex02/Makefile
@@ -8,7 +8,7 @@ SRC			=	main.cpp \
 
 OBJS		=	$(SRC:.cpp=.o)
 
-CC		=	clang++
+CC		=	c++
 
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 
@@ -18,7 +18,8 @@ EXEC		=	$(NAME)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+
 
 
 clean:
