--- a/M-05/.vscode/settings.json
+++ b/M-05/.vscode/settings.json
@@ -1,28 +1,26 @@
 {
 	"files.associations": {
+		"iosfwd": "cpp",
+		"iostream": "cpp",
 		"__bit_reference": "cpp",
 		"__config": "cpp",
 		"__debug": "cpp",
 		"__errc": "cpp",
 		"__functional_base": "cpp",
-		"__hash_table": "cpp",
 		"__locale": "cpp",
 		"__mutex_base": "cpp",
-		"__node_handle": "cpp",
 		"__nullptr": "cpp",
 		"__split_buffer": "cpp",
 		"__string": "cpp",
 		"__threading_support": "cpp",
 		"__tuple": "cpp",
 		"algorithm": "cpp",
-		"array": "cpp",
 		"atomic": "cpp",
 		"bit": "cpp",
 		"bitset": "cpp",
 		"cctype": "cpp",
 		"chrono": "cpp",
 		"cmath": "cpp",
-		"complex": "cpp",
 		"cstdarg": "cpp",
 		"cstddef": "cpp",
 		"cstdint": "cpp",
@@ -32,12 +30,13 @@
 		"ctime": "cpp",
 		"cwchar": "cpp",
 		"cwctype": "cpp",
+		"deque": "cpp",
 		"exception": "cpp",
+		"fstream": "cpp",
 		"functional": "cpp",
 		"initializer_list": "cpp",
+		"iomanip": "cpp",
 		"ios": "cpp",
-		"iosfwd": "cpp",
-		"iostream": "cpp",
 		"istream": "cpp",
 		"iterator": "cpp",
 		"limits": "cpp",
@@ -45,10 +44,11 @@
 		"memory": "cpp",
 		"mutex": "cpp",
 		"new": "cpp",
-		"optional": "cpp",
+		"numeric": "cpp",
 		"ostream": "cpp",
+		"random": "cpp",
 		"ratio": "cpp",
-		"sstream": "cpp",
+		"stack": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"string": "cpp",
@@ -57,7 +57,6 @@
 		"tuple": "cpp",
 		"type_traits": "cpp",
 		"typeinfo": "cpp",
-		"unordered_map": "cpp",
 		"utility": "cpp",
 		"vector": "cpp"
 	}
