--- a/M-05/ex03/Makefile
+++ b/M-05/ex03/Makefile
@@ -12,7 +12,7 @@ OBJS		=	$(SRC:.cpp=.o)
 
 CC		=	c++
 
-CFLAGS		=	-Wall -Wextra -Werror -std=c++98
+CFLAGS		=	-Wall -Wextra -Werror -std=c++98 -fsanitize=address
 
 
 EXEC		=	$(NAME)
