--- a/M-05/ex02/Makefile
+++ b/M-05/ex02/Makefile
@@ -11,7 +11,7 @@ OBJS		=	$(SRC:.cpp=.o)
 
 CC		=	c++
 
-CFLAGS		=	-Wall -Wextra -Werror -std=c++98
+CFLAGS		=	-Wall -Wextra -Werror -std=c++98 
 
 
 EXEC		=	$(NAME)
@@ -22,6 +22,9 @@ all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+	
+.cpp.o: $(SRCS) $(OBJS)
+		$(CC) $(CFLAGS) -c $< -o $@
 
 
 clean:
