--- a/M-05/ex03/Makefile
+++ b/M-05/ex03/Makefile
@@ -12,18 +12,18 @@ OBJS		=	$(SRC:.cpp=.o)
 
 CC		=	c++
 
-CFLAGS		=	-Wall -Wextra -Werror -std=c++98 -fsanitize=address
+CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 
 
 EXEC		=	$(NAME)
 
 
 all: $(NAME)
-	
 
 $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
-
+.cpp.o: $(SRCS) $(OBJS)
+		$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -rf $(OBJS)
